# robotraconteur_pyodide

./: .gitignore  CMakeLists.txt  Jinja2.data  Jinja2.js  MarkupSafe.data  MarkupSafe.js  Pygments.data  Pygments.js  README.md  asciitree.data  asciitree.js  astropy.js  atomicwrites.data  atomicwrites.js  attrs.data  attrs.js  autograd.data  autograd.js  beautifulsoup4.data  beautifulsoup4.js  biopython.js  bleach.data  bleach.js  build_robotraconteur_pyodide.sh  cloudpickle.data  cloudpickle.js  console.html  cssselect.data  cssselect.js  cycler.data  cycler.js  cytoolz.data  cytoolz.js  decorator.data  decorator.js  distlib.data  distlib.js  docutils.data  docutils.js  freesasa.data  (+97 more)
RobotRaconteurCore/: CMakeLists.txt
RobotRaconteurCore/include/: RobotRaconteur.h
RobotRaconteurCore/include/RobotRaconteur/: ASIOStreamBaseTransport.h  AsyncUtils.h  BrowserWebSocketTransport.h  CallbackMember.h  Client.h  DataTypes.h  Endpoint.h  Generator.h  Logging.h  NodeSetup.h  PipeMember.h  RobotRaconteurConfig.h  RobotRaconteurNode.h  RobotRaconteurServiceIndex_stubskel.h  ServiceFactory.h  Subscription.h  Tap.h  Timer.h  Transport.h  WireMember.h  browser_deadline_timer.h
RobotRaconteurCore/src/: ASIOStreamBaseTransport.cpp  ASIOStreamBaseTransport.h  AsyncMessageIO.cpp  AsyncMessageReader.cpp  AsyncMessageWriter.cpp  AsyncUtils.cpp  BrowserWebSocketTransport.cpp  BrowserWebSocketTransport_private.h  Client.cpp  DataTypes.cpp  Discovery.cpp  Discovery_private.h  Endpoint.cpp  Error.cpp  Generator.cpp  IOUtils.cpp  Logging.cpp  Message.cpp  NodeID.cpp  NodeSetup.cpp  PipeMember.cpp  RobotRaconteurNode.cpp  RobotRaconteurNode_connector.cpp  RobotRaconteurNode_connector_private.h  RobotRaconteurServiceIndex_stubskel.cpp  ServiceDefinition.cpp  ServiceFactory.cpp  ServiceStructure.cpp  StringTable.cpp  Subscription.cpp  Subscription_private.h  Tap.cpp  ThreadPool.cpp  Timer.cpp  Transport.cpp  WireMember.cpp
RobotRaconteurPython/: BrowserWebSocketTransportPython.i  CMakeLists.txt  Client.py  ClientPython.i  DiscoveryPython.i  NamedClient.py  PythonExceptionTypemaps.i  PythonSwigVars.cmake  PythonTypeSupport.cpp  PythonTypeSupport.h  PythonTypeSupport.i  RobotRaconteurNodePython.i  RobotRaconteurPython.i  RobotRaconteurPythonUtil.py  __init__.py  setup.py.in
RobotRaconteurPython/test/: RobotRaconteurPythonTest.py
SWIG/: BrowserWebSocketTransport.i  Client.i  Discovery.i  Generator.i  NodeSetup.i  PipeMember.i  RobotRaconteurNode.i  RobotRaconteurSWIGSources.cmake  RobotRaconteurWrapped.cpp  RobotRaconteurWrapped.h  Subscription.i  Timer.i  WireMember.i
cmake/: package_source_swig.cmake
testing/pyodide_test/: serve.py
testing/pyodide_test/test/: test_await.html  test_await.py  test_await_performance.html  test_await_performance.py  test_matplotlib.html  test_matplotlib.py  test_multiple.html  test_multiple.py  test_multiple2.html  test_multiple2.py  test_robot.html  test_robot.py  test_sha256_performance.html  test_sha256_performance.py  test_subscriber.html  test_subscriber.py  test_timers.html  test_timers.py  test_transport.html  test_transport.py  test_wire.html  test_wire.py
